# Cpp-Projects

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SYNTAX_PRACTICES.md
.devcontainer/: devcontainer.json
00-helloworld/: .gitignore  main.cpp
01-Clock/: CMakeLists.txt
01-dice/: main.cpp
02-graphics/: CMakeLists.txt  README.md  main.cpp
02-graphics/.devcontainer/: devcontainer.json
02-graphics/line/: CMakeLists.txt  line.cpp
02-graphics/line/include/line/: line.h
02-graphics/line/src/: line.cpp
02-graphics/model/: CMakeLists.txt  geometry.h
02-graphics/point/: CMakeLists.txt
02-graphics/point/include/point/: point.h
02-graphics/point/src/: point.cpp
02-graphics/point/test/: point.cpp
02-graphics/tgaimage/: CMakeLists.txt  tgaimage.cpp
02-graphics/tgaimage/include/tgaimage/: tgaimage.h
03-guess/: CMakeLists.txt  main.cpp
03-guess-the-number/: CMakeLists.txt  activity.puml
03-guess-the-number/number/src/: number.cpp
03-guess-the-number/number/test/: number.cpp
03-guess/number/: CMakeLists.txt
03-guess/number/include/number/: number.h
04-timer/: CMakeLists.txt  main.cpp
